// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions stats download statistic should dispatch an error because download failed 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to download statistics",
    "type": "FETCH_STATS_ERROR",
  },
]
`;


exports[`actions stats fetch statistic should fetch a statistic and report an error because the stat does not exist 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to retrieve statistics",
    "type": "FETCH_STATS_ERROR",
  },
]
`;

exports[`actions stats fetch statistic should fetch and save a statistic (label: "my-custom-stat") 1`] = `
Array [
  Object {
    "filtersHash": "d7a34fabb4dd4ddc3a5b44e38b4c2339",
    "name": "my-custom-stat",
    "stat": Object {
      "data": Array [
        1,
        2,
        3,
      ],
      "meta": Object {
        "start_datetime": "now",
      },
      "name": "overview",
    },
    "type": "FETCH_STATS_SUCCESS",
  },
]
`;

exports[`actions stats fetch statistic should fetch and save a statistic (label: "null") 1`] = `
Array [
  Object {
    "filtersHash": "d7a34fabb4dd4ddc3a5b44e38b4c2339",
    "name": "overview",
    "stat": Object {
      "data": Array [
        1,
        2,
        3,
      ],
      "meta": Object {
        "start_datetime": "now",
      },
      "name": "overview",
    },
    "type": "FETCH_STATS_SUCCESS",
  },
]
`;
